Used css loader. Fix hearthstone card bug not showing cards at 1440p.

--- a/src/scss/partials/base/_fonts.scss
+++ b/src/scss/partials/base/_fonts.scss
@@ -1,29 +1,29 @@
 @font-face {
     font-family: "Belwe Bold";
-    src: url(../fonts/BelweBold.otf) format("opentype");
+    src: url(/fonts/BelweBold.otf) format("opentype");
 }
 
 @font-face {
     font-family: "Big Noodle Titling";
-    src: url(../fonts/big_noodle_titling.ttf) format("truetype");
+    src: url(/fonts/big_noodle_titling.ttf) format("truetype");
 }
 
 @font-face {
     font-family: "Alegreya Sans";
-    src: url(../fonts/AlegreyaSans-Regular.ttf) format("truetype");
+    src: url(/fonts/AlegreyaSans-Regular.ttf) format("truetype");
 }
 
 @font-face {
     font-family: "Podkova";
-    src: url(../fonts/Podkova-Regular.ttf) format("truetype");
+    src: url(/fonts/Podkova-Regular.ttf) format("truetype");
 }
 
 @font-face {
     font-family: "Config";
-    src: url(../fonts/ConfigCondensedRegular.otf) format("opentype");
+    src: url(/fonts/ConfigCondensedRegular.otf) format("opentype");
 }
 
 // @font-face {
 //     font-family: "Netflix Sans Medium";
-//     src: url(../fonts/NetflixSansMedium.otf) format("opentype");
+//     src: url(/fonts/NetflixSansMedium.otf) format("opentype");
 // }
