--- a/src/scss/partials/layouts/_hearthstoneHeroesCarousel.scss
+++ b/src/scss/partials/layouts/_hearthstoneHeroesCarousel.scss
@@ -46,7 +46,7 @@
         height: auto;
         object-fit: cover;
         @media screen and (min-width: $xl_breakpoint) {
-            width: 20rem;
+            width: 26rem;
         }
     }
     h4 {
